--- a/index.html
+++ b/index.html
@@ -3,38 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>App de Cadastro e Login com Gerador de Senhas</title>
+  <title>Gerador de Senhas - Aplicativo Completo</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <!-- Formulário de Login -->
-    <div id="login-form">
-      <h2>Login</h2>
-      <input type="text" id="login-username" placeholder="Usuário" required>
-      <input type="password" id="login-password" placeholder="Senha" required>
-      <button onclick="login()">Entrar</button>
-      <p>Ainda não tem conta? <a href="#" onclick="showRegister()">Cadastre-se aqui</a></p>
-      <p id="login-error" class="error-message"></p>
-    </div>
+  <div class="container" id="login-form">
+    <h2>Login</h2>
+    <input type="text" id="login-username" placeholder="Usuário" required>
+    <input type="password" id="login-password" placeholder="Senha" required>
+    <button onclick="login()">Entrar</button>
+    <p>Ainda não tem conta? <a href="#" onclick="showRegister()">Cadastre-se</a></p>
+    <p id="login-error" class="error-message"></p>
+  </div>
 
-    <!-- Formulário de Cadastro -->
-    <div id="register-form" style="display: none;">
-      <h2>Cadastro</h2>
-      <input type="text" id="register-username" placeholder="Usuário" required>
-      <input type="password" id="register-password" placeholder="Senha" required>
-      <input type="password" id="register-password-confirm" placeholder="Confirme a senha" required>
-      <button onclick="register()">Cadastrar</button>
-      <p>Já tem conta? <a href="#" onclick="showLogin()">Voltar ao login</a></p>
-      <p id="register-error" class="error-message"></p>
-    </div>
+  <div class="container" id="register-form" style="display: none;">
+    <h2>Cadastro</h2>
+    <input type="text" id="register-username" placeholder="Usuário" required>
+    <input type="password" id="register-password" placeholder="Senha" required>
+    <input type="password" id="register-password-confirm" placeholder="Confirme a senha" required>
+    <button onclick="register()">Cadastrar</button>
+    <p>Já tem conta? <a href="#" onclick="showLogin()">Voltar ao Login</a></p>
+    <p id="register-error" class="error-message"></p>
+  </div>
 
-    <!-- Seção do Gerador de Senhas (oculto inicialmente) -->
-    <div id="password-generator" style="display: none;">
-      <h3>Gerar Senha Forte</h3>
-      <button onclick="generatePassword()">Gerar Senha</button>
-      <p id="generated-password"></p>
+  <div class="container" id="main-panel" style="display: none;">
+    <h2>Bem-vindo!</h2>
+    <button onclick="generatePassword()">Gerar Senha Forte</button>
+    <div id="password-list">
+      <h3>Senhas Geradas:</h3>
+      <ul id="generated-passwords"></ul>
     </div>
+    <button onclick="logout()">Sair</button>
   </div>
 
   <script src="script.js"></script>
