--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p>Umidade: <span id="humidity">--</span> %</p>
         <p>Status do Equipamento: <span id="equipment-status">Normal</span></p>
       </div>
-      <button onclick="generateReport()">Gerar Relatório de Desempenho</button>
+      <button id="generate-report" onclick="generateReport()">Gerar Relatório de Desempenho</button>
       <div id="report" style="display: none;">
         <h3>Relatório de Desempenho do Equipamento</h3>
         <p>Tempo em operação: <span id="operation-time">--</span> horas</p>
